force-app/main/default/objects/Flight__c/fields/Aircraft__c.field-meta.xml
<CustomField>
    <fullName>Aircraft__c</fullName>
    <description>Aircraft</description>
    <label>Aircraft</label>
    <type>Text</type>
    <length>30</length>
</CustomField>