force-app/main/default/objects/Flight__c/fields/Airlines__c.field-meta.xml
<CustomField>
    <fullName>Airlines__c</fullName>
    <description>Airlines</description>
    <label>Airlines</label>
    <required>true</required>
    <type>Text</type>
    <length>255</length>
</CustomField>