force-app/main/default/objects/Flight__c/fields/ArrivalTime__c.field-meta.xml
<CustomField>
    <fullName>ArrivalTime__c</fullName>
    <description>Flight arrival time</description>
    <label>Arrival Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>