force-app/main/default/objects/Flight__c/fields/Departure__c.field-meta.xml
<CustomField>
    <fullName>Departure__c</fullName>
    <description>Departure airport code (IATA)</description>
    <label>Departure</label>
    <required>true</required>
    <type>Text</type>
    <length>3</length>
</CustomField>