force-app/main/default/objects/Flight__c/fields/DepartureTime__c.field-meta.xml
<CustomField>
    <fullName>DepartureTime__c</fullName>
    <description>Flight departure time</description>
    <label>Departure Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>