force-app/main/default/objects/Flight__c/fields/Destination__c.field-meta.xml
<CustomField>
    <fullName>Destination__c</fullName>
    <description>Destination airport code (IATA)</description>
    <label>Destination</label>
    <required>true</required>
    <type>Text</type>
    <length>3</length>
</CustomField>