force-app/main/default/objects/Flight__c/fields/FlightNumber__c.field-meta.xml
<CustomField>
    <fullName>FlightNumber__c</fullName>
    <description>Flight Number</description>
    <label>Flight Number</label>
    <type>Text</type>
    <length>8</length>
</CustomField>