force-app/main/default/objects/Flight__c/fields/PNR__c.field-meta.xml
<CustomField>
    <fullName>PNR__c</fullName>
    <description>Passenger Name Record</description>
    <label>PNR</label>
    <required>true</required>
    <type>Text</type>
    <length>6</length>
</CustomField>